@@ -1,3 +1,7 @@
+2004-05-20  Victor Rachels  <sekmu@tisiphone.dhs.org>
+
+	* arch/win32/digi.c: altsounds (d1x r1.6)
+
 2004-05-20  Matthew Mueller  <donut@dakotacom.net>
 
 	* arch/win32/digi.c: fixed a major memory leak and removed a bit
